--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,14 +14,13 @@ pool:
 variables:
   buildConfiguration: 'Release'
   wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '3.1.300'
 
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET Core SDK $(dotnetSdkVersion)'
+  displayName: 'Use .NET Core SDK 3.1.300'
   inputs:
-    version: '$(dotnetSdkVersion)'
+    version: '3.1.300
 
 - task: Npm@1
   displayName: 'Run npm install'
