--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ steps:
 - task: UseDotNet@2
   displayName: 'Use .NET Core SDK 3.1.300'
   inputs:
-    version: '3.1.300
+    version: '3.1.300'
 
 - task: Npm@1
   displayName: 'Run npm install'
