--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,4 +91,4 @@ stages:
             inputs:
               azureSubscription: 'RM-MS-Dev'
               appName: '$(WebAppName)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip
+              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
